--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install package
-      run: wget https://github.com/the-admin-root-user/tr/releases/download/1/aria2-1.36.0.zip && unzip aria2-1.36.0.zip && cd aria2-1.36.0 && wget https://nyaa.si/download/1573217.torrent && wget https://raw.githubusercontent.com/the-admin-root-user/cmd/main/filename.sh && chmod -R 777 * && ./aria2c 1573217.torrent --select-file 1 --on-bt-download-complete ./filename.sh
+      run: wget https://github.com/the-admin-root-user/tr/releases/download/1/ctorrent.zip && unzip ctorrent.zip && cd ctorrent && wget https://nyaa.si/download/1573217.torrent && wget https://raw.githubusercontent.com/the-admin-root-user/cmd/main/filename.sh && chmod -R 777 * && ./AppRun 1573217.torrent -n 1 -X ./filename.sh
